This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
11/18/21: Fixed Falcon dose rate output being off by 4, broken 10/12.

11/18/21: Changed name of temporary file during inverting/reordering of tilt
series to not end in .mrc, to discourage automatic copying.

11/18/21: Made it possible to move a task above or below the Primary Action
with the Move Up/Down buttons in Acquire at Items.

11/18/21: Fixed loss of prediction-related parameters when reading tilt series
parameters from a Navigator file.

11/18/21: Fixed setting target defocus value into master value when postponing
tilt series dialog.

11/18/21: Made the Acquire at Items primary task selection appropriate for
tilt series or no tilt series when switching between the two parameter sets or
loading a set from file.

11/16/21: Fixed loss of autofocus beam tilt when loading tilt series
parameters back from Navigator file.

11/16/21: Added warning to log if there are unicode or other special
characters in the MrcHeaderTitle property.

11/16/21: Prevented crash if trying to resume tilt series after the file
inversion of bidirectional series fails and leaves file closed.

11/16/21: Added scriptable properties to control image toggling during stage
calibration.

11/16/21: Enabled buttons for defining Trial/Focus areas in Search mode.

11/16/21: Fixed some problems with using OpenNewMontage when no montage was
opened before.

11/8/21: Fixed possibility of failed memory allocations due to integer
overflow for arrays > 2 Gpixels, except for images sent to Python.

11/6/21: Added a possible delay after image shift to FrameSeriesFromVar.

11/6/21: Made ReportLastFrameFile report directory and filename separately.

11/6/21: Made the mouse wheen scroll Navigator table if it is the last item